fix twitter thing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -765,7 +765,6 @@ ul.chars{
 
 .sidebar {
     width: 25%;
-    margin: 0px 10px;
     max-width: 300px;
     min-width: 200px;
 }
